--- a/main.css
+++ b/main.css
@@ -1,6 +1,11 @@
 @font-face {
-    font-family: "Norms";
+    font-family: "normsBold";
     src: url("/font/tt-norms-pro-cufonfonts/TT\ Norms\ Pro\ Bold.otf");
+    
+  }
+  @font-face{
+    font-family: "normsNormal";
+    src: url("/font/tt-norms-pro-cufonfonts/TT\ Norms\ Pro\ Medium.otf");
   }
 
 body
@@ -58,18 +63,17 @@ body
     color: beige;
     font-size: 16px;
     background-color: rgb(236, 17, 17);
-    font-family: norms;
+    font-family: normsBold;
 }
 .header-right-button2
 {
     color: black;
     font-size: 16px;
     background-color: white;
-    font-family: norms;
+    font-family: normsBold;
 }
 .header-center
 {
-    background-color: aqua;
     margin-top: 13%;
     margin-left: 25%;
     height: 50%;
@@ -77,7 +81,8 @@ body
 }
 .header-center h1
 {
-    font-family: Norms;
+    color: white;
+    font-family: normsBold;
     font-size: 40px;
 }
 .location-input
@@ -98,14 +103,7 @@ width: 55%;
 height: 55px;
 
 }
-.location-input:focus
-{
-    outline-color: 2px #ec0303;
-}
-.location-img1:focus
-{
-    outline: #ec0303;
-}
+
 .location-input input
 {
     outline: none;
@@ -114,12 +112,12 @@ height: 55px;
 }
 .location-input button
 {
-    background-color: #ec0303;
+    background-color: #ec2121;
     border-radius: 50%;
     margin-top: 2%;
     margin-right: 2%;
     margin-left: 2%;
-    padding: 2px;
+    margin-bottom: 2%;
     text-align: center;
     width:40px;
     height: 40px;
@@ -130,65 +128,126 @@ height: 55px;
 }
 .location-img2
 {
-    height: 70%;
-    width: 80%;
-    
+    height: 80%;
+    margin-left: 2px;
 }
 .center-signin
 {
-    background-color: rgb(87, 32, 32);
+    margin-top: 20px;
+    width: 50%;
+    margin-left:25% ;
+}
+.center-signin img
+{
+    height: 20px;
+    margin-top: 2.5%;
+    margin-left: 15px;
+    padding-right: 7px;
+}
+.center-signin button
+{
+    font-family: normsBold;
+    font-size: 14px;
+    height: 30px;
+    width: 60%;
+    margin-left: 20%;
+    border-radius: 20px;
     display: flex;
     flex-direction: row;
+    background-color: beige;
+}
+.center-signin div
+{
+    margin-top: 2%;
 }
 .middle
 {
     height: auto;
-    background-color: blue;
+    background-color: #ffff;
 }
 .middle1
 {
-    background-color: aqua;
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
     padding-top: 8%;
+}
+.middle1-col1
+{
+    height: 420px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 20%;
+    margin-left: 15%;
+    overflow-wrap: break-word;
+}
 
-}
-.middle1-row1
+
+.middle1-col2
 {
-    background-color: brown;
+    height: 420px;
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    width: 20%;
+    margin-left: 5%;
 }
-.middle1-row2
+.middle1-col3
 {
-    background-color: brown;
+    height: 420px;
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    width: 20%;
+    margin-left: 5%;
+    margin-right: 20%;
+    
 }
-.middle1-row3
+.middle1 img
 {
-    background-color: brown;
+    height: 154px;
+    width: 154px;
+    margin-top: 0px;
+}
+.middle1-text 
+{
+    width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
 }
-.img-row1
+.middle1-text h1
 {
-    background-color: rgb(185, 220, 220);
+    text-align: center;
+    font-family: normsBold;
+    font-size: 30px;
+    line-height: normal;
 }
-.img-row2
+.middle1-text p
 {
-    background-color: rgb(106, 126, 126);
+    font-family: normsNormal;
+
+    font-size: 17px;
+    width: 100%;
+    text-align: center;
 }
-.img-row3
+.continuebtn
 {
-    background-color: rgb(75, 88, 88);
+    margin-top: 5px;
+    font-family: normsBold;
+    font-size: 15px;
+    color: #eb1700;
+}
+.continuebtn img
+{
+    margin-left: 2px;
+    height:20px;
+    width: 20px;
+}
+.continuebtn button
+{
+    display: flex;
+    flex-direction: row;
 }
 .footer
 {
