--- a/main.css
+++ b/main.css
@@ -249,6 +249,149 @@ height: 55px;
     display: flex;
     flex-direction: row;
 }
+.middle2 {
+    display: flex;
+    flex-direction: row;
+    padding-top: 100px;
+}
+.middle2-left {
+    width: 42%;
+    padding-left: 12%;
+    padding-top: 8%;
+}
+.m2l1 {
+    line-height: 40px;
+    font-size: 35px;
+    font-family: normsbold;
+    margin-right: 25%;
+}
+.m2l2 {
+    padding-top: 10px;
+    font-size: 20px;
+    font-family: normsnormal;
+}
+.m2l3 {
+    padding-top: 10px;
+    font-family: normsnormal;
+    margin-right: 12%;
+}
+.middle2-left button {
+    font-size: 15px;
+    font-family: normsbold;
+    margin-top: 30px;
+    background-color: rgb(236, 33, 33);
+    color: white;
+    padding: 8px;
+    border-radius: 90px;
+}
+.middle2-right 
+{
+    width: 58%;
+}
+.middle2 img
+{
+    max-width: 100%;
+    height: auto;
+}
+.middle3 
+{
+    margin-top: -40px;
+    background-color: rgb(254, 241, 238);
+    z-index: 2;
+    display: flex;
+    flex-direction: row;
+    padding-bottom: 30px;
+}
+.middle3-left 
+{
+    width: 58%;
+    padding-top: 5%;
+    padding-left: 12%;
+}
+.middle3 img
+{
+    max-width: 100%;
+    height: auto;
+}
+.middle3-right 
+{
+    width: 42%;
+    padding-top: 15%;
+    padding-left: 5%;
+}
+.m3r1 
+{
+    font-family: normsbold;
+    font-size: 35px;
+    margin-right: 50%;
+    line-height: 40px;
+}
+.m3r2 
+{
+    padding-top: 10px;
+    font-family: normsnormal;
+    margin-right: 12%;
+}
+.middle3-right button 
+{
+    font-size: 15px;
+    font-family: normsbold;
+    margin-top: 30px;
+    background-color: rgb(236, 33, 33);
+    color: white;
+    padding: 8px;
+    border-radius: 90px;
+}
+.middle4 
+{
+    background-image: url(images/grocery_desktop.png);
+    background-size: cover;
+    background-repeat: no-repeat;
+    display: flex;
+    flex-direction: column;
+    padding-top: 10%;
+    color: white;
+    height: 85%;
+    filter: brightness(0.5);
+    background-position: center center;
+}
+.m4 
+{
+    text-align: center;
+}
+.m4c1 
+{
+    margin-left: 35%;
+    width: 30%;
+    line-height: normal;
+    font-family: normsbold;
+    font-size: 35px;
+}
+.m4c2 
+{
+    padding-top: 10px;
+    font-size: 20px;
+    font-family: normsnormal;
+}
+.m4c3 
+{
+    margin-left: 32.5%;
+    width: 35%;
+    text-align: center;
+    padding-top: 10px;
+    font-family: normsnormal;
+}
+.m4 button 
+{
+    font-size: 15px;
+    font-family: normsbold;
+    margin-top: 30px;
+    background-color: rgb(236, 33, 33);
+    color: white;
+    padding: 8px;
+    border-radius: 90px;
+}
+
 .footer
 {
     height: 100%;
